<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SavedWhereYouWantAddress">

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/ic_address_pic"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/you_have_no_address0"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="12dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/tell_us_where"
        android:gravity="center"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:background="#ea6225"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_new_address"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

</LinearLayout>